add starting slash

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "redirects" : [
-        {"source" : "submit", "destination" : "https://tickets.demuxed.com", "permanent": false}
+        {"source" : "/submit", "destination" : "https://tickets.demuxed.com", "permanent": false}
     ]
 }
